--- a/css/dog_friendly.css
+++ b/css/dog_friendly.css
@@ -503,15 +503,16 @@
   .content.dog_friendly .list .hard_card {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 24px;
+    gap: 24px;
     overflow: hidden;
+    min-height: 381px;
+    height: auto;
   }
   .content.dog_friendly .list .hard_card .desc {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     padding: 40px;
-    max-height: 440px;
   }
   .content.dog_friendly .list .hard_card picture img {
     width: 100%;
