--- a/css/dog_friendly.scss
+++ b/css/dog_friendly.scss
@@ -550,16 +550,16 @@
       .hard_card {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-column-gap: 24px;
-
+        gap: 24px;
         overflow: hidden;
+        min-height: 381px;
+        height: auto;
 
         .desc {
           display: flex;
           flex-direction: column;
           justify-content: space-around;
           padding: 40px;
-          max-height: 440px;
         }
         picture {
           img {
